# shorts-pilot

./: .env.example  .gitignore  README.md  config.yaml  config.yaml.example  init_seen.py  pyproject.toml  refill.py  requirements.txt
generator/: __init__.py  llm.py  prompt.py  settings.py
src/shorts_pilot/: __init__.py  init_seen.py  refill.py
src/shorts_pilot/generator/: jobs.py  llm.py  lock.py  prompt.py  seen.py  settings.py
