[project]
name = "shorts-pilot"
version = "0.1.0"
description = "Auto-generate YouTube Shorts video ideas and refill your MoneyPrinterTurbo jobs queue via LLM"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
refill = "shorts_pilot.refill:main"
init-seen = "shorts_pilot.init_seen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shorts_pilot"]

[tool.ruff]
line-length = 100
target-version = "py310"